# qt5-gui-exercises

./: README.md
10_graphics/src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  profilebox.cpp  profilebox.h  profileline.cpp  profileline.h  resources.qrc
11_camera/src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
12_networking/src_client/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
12_networking/src_server/: CMakeLists.txt  main.cpp  server.cpp  server.h
13_paint/src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
14_paint_2/src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
15_ftp/src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
16_multimedia_image/src/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
17_multimedia_sound/src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
18_multimedia_video/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
19_qml/src/: CMakeLists.txt  MainForm.ui.qml  main.qml  resources.qrc
1_hello_world/src/: CMakeLists.txt  main.cpp  main_window.ui  ui_main_window.h
20_qml_2/src/: CMakeLists.txt  main.cpp
2_simple_ui/src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
3_database_connection/src/: CMakeLists.txt  main.cpp
4_charts/src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
5_dashboard/src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
6_veiws_and_dialogs/src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
7_image_scaling/src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
8_web/src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
8_web/src/html/: test.html
9_map_viewer/src/: CMakeLists.txt  index.html  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
9_map_viewer/src/qml/: mapview.qml
